--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <img id="rename" title="Đổi lại tên" src="template/images/rename.png">
         <input type="submit" id='create' value="Tạo Phòng">
         <input type="submit" id="error" value="Báo Lỗi ☣">
+        <div>Online: <span id="online"></span></div>
         <div class="limiter">
             <div class="container-table100">
                 <div class="wrap-table100">
