--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="template/css/mycss.css">
-    <script>window.$ = window.jQuery = require('jquery');</script>
+    <script>window.$ = window.jQuery</script>
     <script>
         const Toast = Swal.mixin({
             toast: true,
