update GUI, add respawn

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,7 @@
     <!-- GAME -->
     <div id="wrap-game">
         <input type="submit" id='exit' value="Thoát game">
+        <input type="submit" id='respawn' value="Hồi Sinh">
     </div>
     <div id="taophong">
         
@@ -86,7 +87,7 @@
                 ip = "http://gunsurvival2.herokuapp.com/";
                 break;
             default:
-                ip = "http://222.254.219.42/";
+                ip = "http://gunsurvival-server.cf/";
                 break;
         }
 
