--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,7 @@
     <div id="wrap-game">
         <input type="submit" id='exit' value="Thoát game">
         <input type="submit" id='respawn' value="Hồi Sinh">
+        <input type="text" id='chat' placeholder="Trò chuyện . . ." maxlength="50">
     </div>
     <div id="taophong">
         
