--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <img src="template/images/loading.gif" style="display: block; margin-left: auto; margin-right: auto;">
     </div> -->
     <!-- <link rel="icon" type="image/png" href="assets/images/icons/favicon.ico" /> -->
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" charset="utf-8">
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" charset="utf-8"> -->
     <link rel="stylesheet" type="text/css" href="template/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="template/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="template/vendor/animate/animate.css">
