--- a/src/index.html
+++ b/src/index.html
@@ -116,6 +116,7 @@
     <script src="js/function.js"></script>
     <script src="js/manager.js"></script>
     <script src="js/sprite/sprite.js"></script>
+    <script src="js/sprite/chattext.js"></script>
     <script src="js/sprite/box_wooden.js"></script>
     <script src="js/sprite/box_emty.js"></script>
     <script src="js/sprite/roof_brown.js"></script>
