--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>GUN SURVIVAL ♥</title>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" charset="UTF-8">
     <link rel="icon" href="favicon.ico">
     <!-- <div id="p5_loading" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: #6A3152; z-index: 1">
         <img src="template/images/loading.gif" style="display: block; margin-left: auto; margin-right: auto;">
@@ -89,7 +89,7 @@
                 ip = "http://gunsurvival2.herokuapp.com/";
                 break;
             default:
-                ip = "http://14.240.91.7:1234/";
+                ip = "http://localhost:3000/";
                 break;
         }
 
@@ -128,6 +128,9 @@
     <script src="js/sprite/rock.js"></script>
     <script src="js/sprite/bullet.js"></script>
     <script src="js/sprite/gunner.js"></script>
+    <script type="text/javascript">
+        const ISMOBILE = isMobile();
+    </script>
     <script defer src="js/game.js"></script>
 </body>
 
