--- a/src/mapeditor/index.html
+++ b/src/mapeditor/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>MAP EDITOR</title>
 </head>
+
 <body>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script>
-		const WIDTH = window.innerWidth, HEIGHT = window.innerHeight, ip = "http://localhost:3000/";
+		const WIDTH = window.innerWidth,
+			HEIGHT = window.innerHeight,
+			ip = "http://localhost:3000/";
 		let listImages = [];
 		$.ajax({
 			url: ip + "list-images",
@@ -16,8 +20,8 @@
 			listImages = res;
 		})
 	</script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D@0.6/p5.collide2d.js"></script>
 	<script src="../js/function.js"></script>
 	<script src="../js/manager.js"></script>
@@ -32,4 +36,5 @@
 	<script src="main.js"></script>
 	<div id="wrap-game" style="position: absolute;top:0px;left: 0px;width: 100%;height: 100%"></div>
 </body>
+
 </html>
