--- a/src/index.html
+++ b/src/index.html
@@ -2,136 +2,139 @@
 <html>
 
 <head>
-    <title>GUN SURVIVAL ♥</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" charset="UTF-8">
-    <link rel="icon" href="favicon.ico">
-    <!-- <div id="p5_loading" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: #6A3152; z-index: 1">
+	<title>GUN SURVIVAL ♥</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" charset="UTF-8">
+	<link rel="icon" href="favicon.ico">
+	<!-- <div id="p5_loading" style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: #6A3152; z-index: 1">
         <img src="template/images/loading.gif" style="display: block; margin-left: auto; margin-right: auto;">
     </div> -->
-    <!-- <link rel="icon" type="image/png" href="assets/images/icons/favicon.ico" /> -->
-    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" charset="utf-8"> -->
-    <link rel="stylesheet" type="text/css" href="template/vendor/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="template/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="template/vendor/animate/animate.css">
-    <link rel="stylesheet" type="text/css" href="template/vendor/select2/select2.min.css">
-    <link rel="stylesheet" type="text/css" href="template/vendor/perfect-scrollbar/perfect-scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="template/css/util.css">
-    <link rel="stylesheet" type="text/css" href="template/css/main.css">
+	<!-- <link rel="icon" type="image/png" href="assets/images/icons/favicon.ico" /> -->
+	<!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" charset="utf-8"> -->
+	<link rel="stylesheet" type="text/css" href="template/vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="template/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="template/vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="template/vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" href="template/vendor/perfect-scrollbar/perfect-scrollbar.css">
+	<link rel="stylesheet" type="text/css" href="template/css/util.css">
+	<link rel="stylesheet" type="text/css" href="template/css/main.css">
 </head>
 
 <body>
-    <!-- MENU -->
-    <div id="menu">
-        <img id="page" class="first" title="KB2A TEAM" src="template/images/page.png">
-        <img id="refresh" class="second" title="Refresh room" src="template/images/refresh.png">
-        <img id="rename" class="third" title="Đổi lại tên" src="template/images/rename.png">
-        <input type="submit" id='create' value="Tạo Phòng">
-        <input type="submit" id="error" value="Báo Lỗi ☣">
-        <div id="online-wrap">Online: <span id="online">đang kết nối . . .</span></div>
-        <div class="limiter">
-            <div class="container-table100">
-                <div class="wrap-table100">
-                    <div class="table100 ver1 m-b-110">
-                        <table data-vertable="ver1" id="ban">
-                            <thead>
-                                <tr class="row100 head">
-                                    <th class="column100 column1" data-column="column1">Chủ phòng</th>
-                                    <th class="column100 column2" data-column="column2">ID</th>
-                                    <th class="column100 column3" data-column="column3">Thông điệp</th>
-                                    <th class="column100 column4" data-column="column4">Tình trạng</th>
-                                    <th class="column100 column5" data-column="column5">Giờ tạo</th>
-                                    <th class="column100 column6" data-column="column6">Thao tác</th>
-                                </tr>
-                            </thead>
-                            <tbody id="table">
+	<!-- MENU -->
+	<div id="menu">
+		<img id="page" class="first" title="KB2A TEAM" src="template/images/page.png">
+		<img id="refresh" class="second" title="Refresh room" src="template/images/refresh.png">
+		<img id="rename" class="third" title="Đổi lại tên" src="template/images/rename.png">
+		<input type="submit" id='create' value="Tạo Phòng">
+		<input type="submit" id="error" value="Báo Lỗi ☣">
+		<div id="online-wrap">Online: <span id="online">đang kết nối . . .</span></div>
+		<div class="limiter">
+			<div class="container-table100">
+				<div class="wrap-table100">
+					<div class="table100 ver1 m-b-110">
+						<table data-vertable="ver1" id="ban">
+							<thead>
+								<tr class="row100 head">
+									<th class="column100 column1" data-column="column1">Chủ phòng</th>
+									<th class="column100 column2" data-column="column2">ID</th>
+									<th class="column100 column3" data-column="column3">Thông điệp</th>
+									<th class="column100 column4" data-column="column4">Tình trạng</th>
+									<th class="column100 column5" data-column="column5">Giờ tạo</th>
+									<th class="column100 column6" data-column="column6">Thao tác</th>
+								</tr>
+							</thead>
+							<tbody id="table">
 
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- GAME -->
-    <div id="wrap-game">
-        <input type="submit" id='exit' value="Thoát game">
-        <input type="submit" id='respawn' value="Hồi Sinh">
-        <input type="text" id='chat' placeholder="Trò chuyện . . ." maxlength="50">
-    </div>
-    <div id="taophong">
-        
-    </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="template/css/mycss.css">
-    <script>window.$ = window.jQuery</script>
-    <script>
-        const Toast = Swal.mixin({
-            toast: true,
-            position: "top-end",
-            showConfirmButton: false,
-            timer: 3000,
-            timerProgressBar: true,
-            background: '#003366',
-            onOpen: toast => {
-                // toast.style.backgroundColor = '';
-                toast.addEventListener("mouseenter", Swal.stopTimer);
-                toast.addEventListener("mouseleave", Swal.resumeTimer);
-            }
-        });
-        const urlParams = new URLSearchParams(window.location.search);
-        const server = urlParams.get('server');
-        let ip = "";
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- GAME -->
+	<div id="wrap-game">
+		<input type="submit" id='exit' value="Thoát game">
+		<input type="submit" id='respawn' value="Hồi Sinh">
+		<input type="text" id='chat' placeholder="Trò chuyện . . ." maxlength="50">
+	</div>
+	<div id="taophong">
 
-        switch (server) {
-            case "heroku":
-                ip = "http://gunsurvival2.herokuapp.com/";
-                break;
-            default:
-                ip = "http://localhost:3000/";
-                break;
-        }
+	</div>
+	</div>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="template/css/mycss.css">
+	<script>
+		window.$ = window.jQuery
+	</script>
+	<script>
+		const Toast = Swal.mixin({
+			toast: true,
+			position: "top-end",
+			showConfirmButton: false,
+			timer: 3000,
+			timerProgressBar: true,
+			background: '#003366',
+			onOpen: toast => {
+				// toast.style.backgroundColor = '';
+				toast.addEventListener("mouseenter", Swal.stopTimer);
+				toast.addEventListener("mouseleave", Swal.resumeTimer);
+			}
+		});
+		const urlParams = new URLSearchParams(window.location.search);
+		const server = urlParams.get('server');
+		let ip = "";
 
-        $('body').css('background', `url("${ip}img/background-min.png")`);
+		switch (server) {
+			case "heroku":
+				ip = "http://gunsurvival2.herokuapp.com/";
+				break;
+			default:
+				ip = "http://localhost:3000/";
+				break;
+		}
 
-    	let WIDTH = window.innerWidth, HEIGHT = window.innerHeight;
-        var qtree;
-        swal.fire({ 
-            title: "Hệ thống đang kết nối tới server của: " + ((ip == "http://gunsurvival2.herokuapp.com/") ? "Heroku" : "Khoa Ko Mlem"),
-            text: "Vui lòng chờ . . .",
-            showConfirmButton: false,
-            allowOutsideClick: false,
-            allowEscapeKey: false,
-            background: '#003366',
-            onOpen: swal.showLoading
-        })
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D@0.6/p5.collide2d.js"></script>
-    <script src="template/js/main.js"></script>
-    <script src="js/quadtree.js"></script>
-    <script src="js/function.js"></script>
-    <script src="js/manager.js"></script>
-    <script src="js/sprite/sprite.js"></script>
-    <script src="js/sprite/chattext.js"></script>
-    <script src="js/sprite/score.js"></script>
-    <script src="js/sprite/box_wooden.js"></script>
-    <script src="js/sprite/box_emty.js"></script>
-    <script src="js/sprite/roof_brown.js"></script>
-    <script src="js/sprite/door.js"></script>
-    <script src="js/sprite/leaf.js"></script>
-    <script src="js/sprite/gravel.js"></script>
-    <script src="js/sprite/tree.js"></script>
-    <script src="js/sprite/rock.js"></script>
-    <script src="js/sprite/bullet.js"></script>
-    <script src="js/sprite/gunner.js"></script>
-    <script type="text/javascript">
-        const ISMOBILE = isMobile();
-    </script>
-    <script defer src="js/game.js"></script>
+		$('body').css('background', `url("${ip}img/background-min.png")`);
+
+		let WIDTH = window.innerWidth,
+			HEIGHT = window.innerHeight;
+		var qtree;
+		swal.fire({
+			title: "Hệ thống đang kết nối tới server của: " + ((ip == "http://gunsurvival2.herokuapp.com/") ? "Heroku" : "Khoa Ko Mlem"),
+			text: "Vui lòng chờ . . .",
+			showConfirmButton: false,
+			allowOutsideClick: false,
+			allowEscapeKey: false,
+			background: '#003366',
+			onOpen: swal.showLoading
+		})
+	</script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/bmoren/p5.collide2D@0.6/p5.collide2d.js"></script>
+	<script src="template/js/main.js"></script>
+	<script src="js/quadtree.js"></script>
+	<script src="js/function.js"></script>
+	<script src="js/manager.js"></script>
+	<script src="js/sprite/sprite.js"></script>
+	<script src="js/sprite/chattext.js"></script>
+	<script src="js/sprite/score.js"></script>
+	<script src="js/sprite/box_wooden.js"></script>
+	<script src="js/sprite/box_emty.js"></script>
+	<script src="js/sprite/roof_brown.js"></script>
+	<script src="js/sprite/door.js"></script>
+	<script src="js/sprite/leaf.js"></script>
+	<script src="js/sprite/gravel.js"></script>
+	<script src="js/sprite/tree.js"></script>
+	<script src="js/sprite/rock.js"></script>
+	<script src="js/sprite/bullet.js"></script>
+	<script src="js/sprite/gunner.js"></script>
+	<script type="text/javascript">
+		const ISMOBILE = isMobile();
+	</script>
+	<script defer src="js/game.js"></script>
 </body>
 
 </html>
